@@ -73,6 +73,8 @@ To use the old style, put @code{(define-special-variable customize-program "sawf
 @item New features:
 @itemize @minus
 
+@item UTF-8 Support in Windowmenus [Wang Diancheng]
+
 @item Tabbed Windowing Support [Yann Hodique, Scott Scriven, Nathan Froyd, Christopher Bratusek]
 
 @item Tabbed Windowing Support: Raise Tabs on hover [Christopher Bratusek]
