@@ -1,3 +1,7 @@
+2009-05-30  Christopher Bratusek <zanghar@freenet.de>
+	* lisp/sawfish/wm/goups.jl
+	* lisp/sawfish/wm/ext/beos-window-menu.jl: UTF-8 Support [Wang Diancheng]
+
 2009-05-27  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/wm/util/prompt.jl: fixed typo
 
